# lifi-auth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ask_receiver.config  c_api.c  c_common.c  c_secure_comm.c  dashboard.sh  debug_connect  debug_connect.c  fetch_key_test.c  home_receiver.config  host.config  instructions.txt  lifi_receiver.config  load_config.c  make_build.sh  net2_receiver.config  package-lock.json  pass_key.sh  receiver.config  receiver_ask.config  run_auth_server.sh  run_build.sh  run_sender_host.sh  rx_monitor.py  set_build.sh  side.config  start_server.sh  test.txt
config/: mbedtls_config.h.orig
diagrams/: ask_receiver.md  flash_receiver.md  hmac_challenge.md  keys_receiver.md  room_communication.md
docs/: CRYPTO_AND_KEYS.md  DEBUGGING_NOTES.md  FIRMWARE.md  HARDWARE.md  PROJECT_OVERVIEW.md  PROTOCOL.md  SOFTWARE.md
hardware/: kicad_guide.md  research_evaluation_guide.md  sender_pcb_design.md  simulation_guide.md
include/: crc16.h  pico_handler.h  protocol.h  protocol.h.orig  sst_crypto_embedded.h  sst_crypto_embedded.h.orig
lib/footprints_kicad/: 2025-11-23_18-03-59.kicad_sym:Zone.Identifier  2025-11-23_18-05-23.kicad_sym:Zone.Identifier  CSD17309Q3.kicad_sym  SRR1260-220M.kicad_sym  UCC27517DBVR.kicad_sym  UCC27517DBVR.kicad_sym:Zone.Identifier
lib/footprints_kicad/CSD17309Q.pretty/: DQG0008A.kicad_mod
lib/footprints_kicad/SRR1260-220M.pretty/: SRR1260-220M.kicad_mod
lib/footprints_kicad/UCC27517.pretty/: SOT95P280X145-5N.kicad_mod
lib/heatshrink/: heatshrink_config.h  heatshrink_decoder.c  heatshrink_decoder.h  heatshrink_encoder.c
receiver/: CMakeLists.txt  push-credentials-to-pi4.sh  update-credentials.sh
receiver/config/credentials/: .gitkeep
receiver/include/: key_exchange.h  key_exchange.h.orig  serial_linux.h
receiver/src/: ask_receiver.c  ask_receiver.c.orig  dash_receiver.c  flash_receiver.c  flash_receiver.c.orig  keys_receiver.c  lifi_key_receiver.c  lifi_key_sender.c  lifi_session_receiver.c  passKeyToPico.c  receiver_ask.c  receiver_flash.c  receiver_keys.c  serial_linux.c  speed_test_receiver.c
receiver_pico/: CMakeLists.txt
receiver_pico/src/: lifi_rx.pio  main.c  raw_bit_monitor.c
sender/: CMakeCache.txt  CMakeLists.txt  send_file.py
sender/dashboard/: app.py  requirements.txt
sender/dashboard/static/: script.js  style.css
sender/dashboard/templates/: index.html
sender/host/: CMakeLists.txt  pico_provisioner.c
sender/host/src/: README.md  sender_host_linux.c
sender/src/: lifi_flash.c  lifi_multi_tx.pio  lifi_session_sender.c  lifi_session_sender.c.orig  pico_speed_test_sender.c  sender_host_linux.c  speed_test_sender.c
src/: cmd_handler.c  pico_handler.c  sst_crypto_embedded.c  sst_crypto_embedded.c.orig
test/: c_api.c  c_secure_comm.c  c_secure_comm.h
test_results/: RESULTS_SUMMARY.md
thesis_paper/: IEEEtran_HOWTO.pdf:Zone.Identifier  conference_101719.aux  conference_101719.fdb_latexmk  conference_101719.fls  conference_101719.tex  lifi_receiver_bom.csv  lifi_sender_bom.csv
